# logic_monitor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  adder64.cpp  and_device.cpp  and_not_device.cpp  and_not_device3.cpp  and_not_device4.cpp  carry4.cpp  carry64.cpp  clock.cpp  cmake_install.cmake  common.cpp  document.cpp  full_adder.cpp  iface.cpp  logic_device.cpp  logic_monitor  logic_monitor.cbp  main.cpp  no_devices.cpp  not_device.cpp  or_device.cpp  or_not_device.cpp  or_not_device3.cpp  or_not_device4.cpp
include/: adder64.h  and_device.h  and_not_device.h  and_not_device3.h  and_not_device4.h  carry4.h  carry64.h  clock.h  common.h  document.h  full_adder.h  iface.h  logic_device.h  no_devices.h  not_device.h  or_device.h  or_not_device.h  or_not_device3.h  or_not_device4.h
src/: adder64.cpp  and_device.cpp  and_not_device.cpp  and_not_device3.cpp  and_not_device4.cpp  carry4.cpp  carry64.cpp  clock.cpp  common.cpp  document.cpp  full_adder.cpp  iface.cpp  logic_device.cpp  no_devices.cpp  not_device.cpp  or_device.cpp  or_not_device.cpp  or_not_device3.cpp  or_not_device4.cpp
